# Effective-XGBoost_book

./: README.md  cleaning.py  pyproject.toml
.github/workflows/: python-package.yml
model/: 03_eda.ipynb  04_gini.ipynb  cleaning.py  decision_tree.py  dummy_model.py  eda.ipynb  extra.ipynb  load_data.py  main.py  transformer.py  utils.py  x_train_data.csv  xgboost_model.py
